[feature #157769826] add color to buttons

--- a/UI/admin-rejected-requests.html
+++ b/UI/admin-rejected-requests.html
@@ -33,9 +33,9 @@
         <div class="sidenav">
             <a   href="#all"><i class="fa fa-home"></i> All</a>          
             <a href="admin-recieved-request.html"><i class="fa fa-check"></i> Received </a>
-            <a  class="success" href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
+            <a   href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="admin-resolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
-            <a href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a><br>
+            <a class="danger" href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a><br>
             <a href="#messages"> <i class="fa fa-comment"></i>Messages</a>
         </div>
     </section>
@@ -61,8 +61,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                   
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr>                                               
                 <tr>
                     <td>1</td>
@@ -71,8 +71,8 @@
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>           
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr> 
                 <tr>
                     <td>1</td>
@@ -81,8 +81,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                                       
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr> 
                 <tr>
                     <td>1</td>
@@ -91,8 +91,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                                       
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr>                                               
                  <tr>
                     <td>1</td>
@@ -101,8 +101,8 @@
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>                   
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr> 
                 <tr>
                     <td>1</td>
@@ -111,8 +111,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                   
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr> 
                 <tr>
                     <td>1</td>
@@ -121,8 +121,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                    
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr>                                               
                 <tr>
                     <td>1</td>
@@ -131,8 +131,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                   
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr> 
                 <tr>
                     <td>1</td>
@@ -141,8 +141,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>                   
-                    <td><button type="button" class=" btn success"> Approved</button></td>
-                    <td><button type="button" class=" btn warning"> Resolve</button></td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                    <td><button type="button" class=" btn success"> Approve</button></td>
                 </tr> 
                
         </div>
