[chore #157901761] Rearrange files and folder stucture

--- a/UI/auth/signin.html
+++ b/UI/auth/signin.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Maintenance Tracker| Sign In</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="icon" type="image/gif" href="animated_favicon1.gif">
-    <script src="js/main.js"></script>
+    <link rel="shortcut icon" href="../static/icons/favicon.ico">
+    <link rel="icon" type="image/gif" href="../static/icons/animated_favicon1.gif">
+    <script src="../static/js/main.js"></script>
 </head>
 <body>
     <header>
@@ -21,13 +21,13 @@
     <nav class="nav-bar">
         <ul>
             <li><a href="#">Maintenance Tracker</a></li>
-            <li><a  href="index.html"><i class="fa fa-home"></i>
+            <li><a  href="../index.html"><i class="fa fa-home"></i>
                 Home</a></li>
             <div class="nav-bar-right">
                 <ul>
                     <li><a  href="signup.html"> <i class="fa fa-plug"></i>
                         Sign Up</a></li>
-                    <li><a class="active" href="user-dashboard.html"><i class="fa fa-lock"></i>
+                    <li><a class="active" href="../user-dashboard/user-dashboard.html"><i class="fa fa-lock"></i>
                         Sign In</a></li>
                 </ul>
             </div>
