--- a/UI/auth/logout.html
+++ b/UI/auth/logout.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="js/main.js"></script>
+    <script src="../static/js/main.js"></script>
 </head>
 <title>
     Maintenance Tracker
@@ -17,7 +17,7 @@
         <nav class="nav-bar">
             <ul>
                 <li><a href="#">Maintenance Tracker</a></li>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a class="active" href="../index.html">Home</a></li>
                 <div class="nav-bar-right">
                     <ul>
                         <li><a href="signup.html">Sign Up</a></li>
