--- a/UI/user-dashboard/user-dashboard.html
+++ b/UI/user-dashboard/user-dashboard.html
@@ -31,9 +31,9 @@
     <section >
         <div class="sidenav">
             <a href="user-new-request.html"> <i class="fa fa-plus"></i> New Request</a>  
-            <a   href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
+            <a class="active"  href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
             <a  href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
-            <a c class="green" href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
+            <a href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
             <a href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
