sample update for sent requests in messages tab

--- a/UI/user-dashboard/user-dashboard.html
+++ b/UI/user-dashboard/user-dashboard.html
@@ -58,7 +58,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn danger"> rejected</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -66,7 +66,7 @@
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -74,7 +74,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -82,7 +82,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn default"> Pending</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -90,7 +90,7 @@
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
-                    <td>pending</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -98,7 +98,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -106,7 +106,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>pending</td>
+                    <td><button type="button" class=" btn  warning"> Resolved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Maintenance</td>
@@ -114,7 +114,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -122,9 +122,9 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
-                </tr> 
-               
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
+                </tr>  
+            </table>   
         </div>
         <div class="flex-container approvedreq" id="approved">
 
