--- a/UI/auth/signin.html
+++ b/UI/auth/signin.html
@@ -12,6 +12,12 @@
     <link rel="icon" type="image/gif" href="../static/icons/animated_favicon1.gif">
     <script src="../static/js/main.js"></script>
 </head>
+<style>
+    body{
+        background-image:none ;
+    }
+    
+</style>
 <body>
     <header>
         <div class=" banner ">
