--- a/UI/auth/signup.html
+++ b/UI/auth/signup.html
@@ -11,6 +11,11 @@
     <link rel="shortcut icon" href="../static/icons/favicon.ico">
     <link rel="icon" type="image/gif" href="../static/icons/animated_favicon1.gif">
     <script src="../static/js/main.js"></script>
+    <style>
+        body {
+            background-image: none;
+        }
+    </style>
 </head>
 <body>
     <header>
