--- a/UI/user-dashboard/user-dashboard.html
+++ b/UI/user-dashboard/user-dashboard.html
@@ -27,19 +27,19 @@
             </li>
             <li>
                 <a href="user-dashboard.html">
-                    <i class="fa fa-cloud"></i>
+                    <i class="fa fa-cloud"></i>&nbsp;
                     Dashboard </a>
             </li>
             <div class="nav-bar-right">
                 <ul>
                     <li>
                         <a href="signup.html">
-                            <i class="fa fa-person"></i>
+                            <i class="fa fa-person"></i>&nbsp;
                             User name</a>
                     </li>
                     <li>
                         <a href="../index.html">
-                            <i class="fa fa-plug"></i>
+                            <i class="fa fa-plug"></i>&nbsp;
                             log out</a>
                     </li>
                 </ul>
