--- a/UI/auth/signin.html
+++ b/UI/auth/signin.html
@@ -27,20 +27,20 @@
     <nav class="nav-bar">
         <ul>
             <li><a href="#">Maintenance Tracker</a></li>
-            <li><a  href="../index.html"><i class="fa fa-home"></i>
+            <li><a  href="../index.html"><i class="fa fa-home"></i>&nbsp;
                 Home</a></li>
             <div class="nav-bar-right">
                 <ul>
-                    <li><a  href="signup.html"> <i class="fa fa-plug"></i>
+                    <li><a  href="signup.html"> <i class="fa fa-plug"></i>&nbsp;
                         Sign Up</a></li>
-                    <li><a class="active" href="../user-dashboard/user-dashboard.html"><i class="fa fa-lock"></i>
+                    <li><a class="active" href="../user-dashboard/user-dashboard.html"><i class="fa fa-lock"></i>&nbsp;
                         Sign In</a></li>
                 </ul>
             </div>
         </ul>
     </nav>
     <!-- <section> -->
-        <div class="flex-container">
+        <div class="flex-container signup">
            <form action="">
               
                 <div class="form-label">
