--- a/UI/index.html
+++ b/UI/index.html
@@ -22,13 +22,13 @@
     <nav class="nav-bar">
         <ul>
             <li><a href="#">Maintenance Tracker</a></li>
-            <li><a class="active" href="index.html"><i class="fa fa-home"></i>
+            <li><a class="active" href="index.html"><i class="fa fa-home"></i>&nbsp
                 Home</a></li>
             <div class="nav-bar-right">
                 <ul>
-                    <li><a href="auth/signup.html"> <i class="fa fa-plug"></i>
+                    <li><a href="auth/signup.html"> <i class="fa fa-plug"></i>&nbsp;
                         Sign Up</a></li>
-                    <li><a href="auth/signin.html"><i class="fa fa-lock"></i>
+                    <li><a href="auth/signin.html"><i class="fa fa-lock"></i>&nbsp;
                         Sign In</a></li>
                 </ul>
             </div>
@@ -44,7 +44,8 @@
         </div>
     <!-- </section> -->
    
-    <P><a href="admin-dashboard/admin-dashboard.html"> Admin dashboard </a> or <a href="user-dashboard/user-dashboard.html"> User dashboard</a> </P>
+    <button class=" btn water" type="button"><a href="admin-dashboard/admin-dashboard.html"> Admin dashboard </a></button> 
+    <button class="btn water" type="button"><a href="user-dashboard/user-dashboard.html"> User dashboard</a></button>
     <footer class="flex-container footer">
         <P>Don't fear the Dog, Fear the owner</P>
     </footer>
