--- a/UI/user-dashboard/user-new-request.html
+++ b/UI/user-dashboard/user-new-request.html
@@ -21,13 +21,13 @@
     <nav id="myHeader" class="nav-bar header">
         <ul>
             <li><a href="#">Maintenance Tracker</a></li>
-            <li><a  href="user-dashboard.html"><i class="fa fa-cloud"></i>
+            <li><a  href="user-dashboard.html"><i class="fa fa-cloud"></i>&nbsp;
                     Dashboard </a></li>                              
             <div class="nav-bar-right">
                 <ul>
-                    <li><a  href="signup.html"> <i class="fa fa-person"></i>
+                    <li><a  href="signup.html"> <i class="fa fa-person"></i>&nbsp;
                         User name</a></li>
-                    <li><a  href="../index.html"><i class="fa fa-plug"></i>
+                    <li><a  href="../index.html"><i class="fa fa-plug"></i>&nbsp;
                         log out</a></li>
                 </ul>
             </div>
