[chore] Update buttons

--- a/UI/admin-dashboard/admin-dashboard.html
+++ b/UI/admin-dashboard/admin-dashboard.html
@@ -36,7 +36,7 @@
     </nav>
     <section >
         <div class="sidenav">
-            <a  class="active" href="#all"><i class="fa fa-home"></i> All</a>          
+            <a  class="soma" href="#all"><i class="fa fa-home"></i> All</a>          
             <a href="admin-recieved-request.html"><i class="fa fa-check"></i> Received </a>
             <a href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="admin-reolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
