--- a/UI/index.html
+++ b/UI/index.html
@@ -43,9 +43,12 @@
             </div>
         </div>
     <!-- </section> -->
-   
-    <button class=" btn water" type="button"><a href="admin-dashboard/admin-dashboard.html"> Admin dashboard </a></button> 
-    <button class="btn water" type="button"><a href="user-dashboard/user-dashboard.html"> User dashboard</a></button>
+    <section class="signup">
+            <button class=" btn soma" type="button"><a href="admin-dashboard/admin-dashboard.html"> Admin dashboard </a></button> 
+            <button class="btn soma" type="button"><a href="user-dashboard/user-dashboard.html"> User dashboard</a></button>
+
+    </section>
+    
     <footer class="flex-container footer">
         <P>Don't fear the Dog, Fear the owner</P>
     </footer>
