--- a/UI/user-dashboard/user-approved-request.html
+++ b/UI/user-dashboard/user-approved-request.html
@@ -38,7 +38,7 @@
             <a href="user-new-request.html"> <i class="fa fa-plus"></i> New Request</a>  
             <a   href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
             <a  href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
-            <a c class="green" href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
+            <a c class="success" href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
             <a href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
@@ -65,7 +65,7 @@
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -74,7 +74,7 @@
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -83,7 +83,7 @@
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -91,7 +91,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td>12/6/2018</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -100,7 +101,7 @@
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -109,7 +110,7 @@
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -118,7 +119,7 @@
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Maintenance</td>
@@ -127,7 +128,7 @@
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -136,7 +137,7 @@
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn success"> Approved</button></td>
                 </tr> 
             </table>               
         </div>
