--- a/UI/user-dashboard/user-new-request.html
+++ b/UI/user-dashboard/user-new-request.html
@@ -35,7 +35,7 @@
     </nav>
     <section >
         <div class="sidenav">
-            <a href="user-new-request.html"> <i class="fa fa-plus"></i> New Request</a>  
+            <a  class="water" href="user-new-request.html"> <i class="fa fa-plus"></i> New Request</a>  
             <a   href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
             <a  href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
             <a c class="green" href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
