--- a/UI/user-dashboard/user-rejected-requests.html
+++ b/UI/user-dashboard/user-rejected-requests.html
@@ -41,7 +41,7 @@
             <a href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
-            <a class="red" href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
+            <a class="danger" href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
             <a href="messages.html"> Messages</a>
         </div>
     </section>
@@ -61,63 +61,63 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>                    
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>                    
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr>                                               
                 <tr>
                     <td>Maintenance</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn danger"> Rejected</button></td>
                 </tr> 
             </table>   
         </div>        
