--- a/UI/user-dashboard/user-resolved-request.html
+++ b/UI/user-dashboard/user-resolved-request.html
@@ -39,7 +39,7 @@
             <a   href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
             <a  href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
             <a  href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
-            <a class="purple" href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
+            <a class="warning" href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
             <a href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
             <a href="messages.html"> Messages</a>
