--- a/UI/user-dashboard/user-sent-requests.html
+++ b/UI/user-dashboard/user-sent-requests.html
@@ -52,7 +52,7 @@
                 <i class="fa fa-plus"></i> New Request</a>
             <a href="user-dashboard.html">
                 <i class="fa fa-home"></i> All</a>
-            <a class="active" href="user-sent-requests.html">
+            <a class="success" href="user-sent-requests.html">
                 <i class="fa fa-check"></i> Sent</a>
             <a href="user-approved-request.html">
                 <i class="fa fa-check"></i>
@@ -70,7 +70,7 @@
         <div class="timeline">
             <div class="container left">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -89,7 +89,7 @@
             </div>
             <div class="container right">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -108,7 +108,7 @@
             </div>
             <div class="container left">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -127,7 +127,7 @@
             </div>
             <div class="container right">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -146,7 +146,7 @@
             </div>
             <div class="container left">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -165,7 +165,7 @@
             </div>
             <div class="container right">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -184,7 +184,7 @@
             </div>
             <div class="container left">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
@@ -203,7 +203,7 @@
             </div>
             <div class="container right">
                 <button class="collapsible">Broken mouse</button>
-                <div class="content">
+                <div class="content soma">
                     <h2>Category :</h2>
                     <p> Maintenance </p>
                     <h3>Title:</h3>
