--- a/UI/admin-dashboard/admin-resolved-requests.html
+++ b/UI/admin-dashboard/admin-resolved-requests.html
@@ -39,7 +39,7 @@
             <a   href="#all"><i class="fa fa-home"></i> All</a>          
             <a href="admin-recieved-request.html"><i class="fa fa-check"></i> Received </a>
             <a  href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
-            <a class="warning" href="admin-reolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
+            <a class="warning" href="admin-resolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
             <a href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a><br>
             <a href="#messages"> <i class="fa fa-comment"></i>Messages</a>
         </div>
