--- a/UI/user-dashboard/user-dashboard.html
+++ b/UI/user-dashboard/user-dashboard.html
@@ -50,7 +50,7 @@
         <div class="sidenav">
             <a href="user-new-request.html">
                 <i class="fa fa-plus"></i> New Request</a>
-            <a class=" active status" href="user-dashboard.html">
+            <a class="soma" href="user-dashboard.html">
                 <i class="fa fa-home"></i> All</a>
             <a href="user-sent-requests.html">
                 <i class="fa fa-check"></i> Sent</a>
