[chore] change color schemes

--- a/UI/user-dashboard/user-sent-requests.html
+++ b/UI/user-dashboard/user-sent-requests.html
@@ -52,7 +52,7 @@
                 <i class="fa fa-plus"></i> New Request</a>
             <a href="user-dashboard.html">
                 <i class="fa fa-home"></i> All</a>
-            <a class="success" href="user-sent-requests.html">
+            <a class="soma" href="user-sent-requests.html">
                 <i class="fa fa-check"></i> Sent</a>
             <a href="user-approved-request.html">
                 <i class="fa fa-check"></i>
