--- a/UI/user-dashboard/user-resolved-request.html
+++ b/UI/user-dashboard/user-resolved-request.html
@@ -67,7 +67,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -77,7 +77,7 @@
                     <td>1/4/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -87,7 +87,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -97,7 +97,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -107,7 +107,7 @@
                     <td>3/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -117,7 +117,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -127,7 +127,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Maintenance</td>
@@ -137,7 +137,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -147,7 +147,7 @@
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn warning"> Resolved</button></td>
                 </tr> 
             </table>               
         </div>
